# shade-python-example

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
