[project]
name = "shade-python-example"
version = "0.1.0"
description = "Simple Shade Agent in Python
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "shade-agent-py"
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
